--- a/firework.html
+++ b/firework.html
@@ -9,6 +9,15 @@
 		<div class="wrapper">
 			<div class="wrapper-display">
 				<p id="time">距离2022还有: 10时50分30秒</p>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>	<br>
+				<br>
+				<br>
+				<p id="time">蔡诗怡新年快乐</p>
 			</div>
 			<span></span>
 			<span></span>
@@ -48,13 +57,13 @@
 	function refreshClock(){
 		let date = new Date()
 		let curr = date.getFullYear() * 10000 + date.getMonth() * 100 + date.getDate()
-		let targ = 20220100
+		let targ = 20250100
 		// console.log(curr)
 		if(curr < targ){
-			time.innerText = '虎年快乐！'
+			time.innerText = '新年快乐！'
 		}else{
-			time.innerText = '距离2022虎年还有:' + getTimeTo2022()
+			time.innerText = '距离2025年还有:' + getTimeTo2022()
 		}
-		time.innerText = '距离2022虎年还有:' + getTimeTo2022()
+		time.innerText = '距离2025年还有:' + getTimeTo2022()
 	}
 </script>
