--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
     <div class="stars"></div>
     <div class="text-container">
-        <div class="particle-text">考试加油，you can do it,孙静茹!</div>
+        <div class="particle-text">考试加油，you can do it,孙婧茹!</div>
     </div>
 
     <script>
